user profile updated

--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,111 +1,113 @@
 <div class="main-content" >
-    <div class="container-fluid">
+    <div class="container-fluid" style="padding-left:12%">
         <div class="row">
-            <div class="col-md-8">
-                <div class="card">
-                    <div class="header">
-                        <h4 class="title">Edit Profile</h4>
+            <div class="col-md-5">
+                <div class="card card-user">
+                    <div class="image">
+                        <img src="https://simonmartin.ch/downloads/linux/Wallpapers/%20Category%20Abstract%20Hd%20Wallpapers%20Subcategory%20Textures%20Hd%20Wallpapers.jpg" alt="..."/>
                     </div>
                     <div class="content">
-                        <form>
-                            <div class="row">
-                                <div class="col-md-5">
-                                    <div class="form-group">
-                                        <label>Company (disabled)</label>
-                                        <input type="text" class="form-control" disabled placeholder="Company" value="Creative Code Inc.">
-                                    </div>
-                                </div>
-                                <div class="col-md-3">
-                                    <div class="form-group">
-                                        <label>Username</label>
-                                        <input type="text" class="form-control" placeholder="Username" value="michael23">
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label for="exampleInputEmail1">Email address</label>
-                                        <input type="email" class="form-control" placeholder="Email">
-                                    </div>
-                                </div>
-                            </div>
+                        <div class="author">
+                            <a href="#">
+                                <img class="avatar border-gray" src="https://sites.google.com/site/akashsinghsisodiya/_/rsrc/1474834402465/profile-photo.jpg" alt="..."/>
 
-                            <div class="row">
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label>First Name</label>
-                                        <input type="text" class="form-control" placeholder="Company" value="Mike">
-                                    </div>
-                                </div>
-                                <div class="col-md-6">
-                                    <div class="form-group">
-                                        <label>Last Name</label>
-                                        <input type="text" class="form-control" placeholder="Last Name" value="Andrew">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label>Address</label>
-                                        <input type="text" class="form-control" placeholder="Home Address" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label>City</label>
-                                        <input type="text" class="form-control" placeholder="City" value="Mike">
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label>Country</label>
-                                        <input type="text" class="form-control" placeholder="Country" value="Andrew">
-                                    </div>
-                                </div>
-                                <div class="col-md-4">
-                                    <div class="form-group">
-                                        <label>Postal Code</label>
-                                        <input type="number" class="form-control" placeholder="ZIP Code">
-                                    </div>
-                                </div>
-                            </div>
-
-                            <div class="row">
-                                <div class="col-md-12">
-                                    <div class="form-group">
-                                        <label>About Me</label>
-                                        <textarea rows="5" class="form-control" placeholder="Here can be your description" value="Mike">Lamborghini Mercy, Your chick she so thirsty, I'm in that two seat Lambo.</textarea>
-                                    </div>
-                                </div>
-                            </div>
-                            <button type="submit" class="btn btn-info btn-fill pull-right">Update Profile</button>
-                            <div class="clearfix"></div>
-                        </form>
+                                <h4 class="title">Akash Sisodiya<br />
+                                    <small>akash-sisodiya-persistent</small>
+                                </h4>
+                            </a>
+                        </div>
+                        <p class="description text-center"> Love Physics <br>
+                             Gamer and love designing <br>
+        
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="text-center">
+                        <button href="#" class="btn btn-simple"><i class="fa fa-facebook-square"></i></button>
+                        <button href="#" class="btn btn-simple"><i class="fa fa-twitter"></i></button>
+                        <button href="#" class="btn btn-simple"><i class="fa fa-google-plus-square"></i></button>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-1"></div>
+            <div class="col-md-5">
                 <div class="card card-user">
                     <div class="image">
-                        <img src="https://ununsplash.imgix.net/photo-1431578500526-4d9613015464?fit=crop&fm=jpg&h=300&q=75&w=400" alt="..."/>
+                        <img src="http://www.wowhdwallpapers.in/wp-content/uploads/2016/abstract/19316/7/blue-mix-abstract-hq-wallpaper-800x600.jpg" alt="..."/>
+                    </div>
+                    <div class="content">
+                        <div class="author">
+                            <a href="#">
+                                <img class="avatar border-gray" src="https://scontent-iad3-1.cdninstagram.com/t51.2885-19/s150x150/21435508_296337927509788_163112004519723008_a.jpg" alt="..."/>
+
+                                <h4 class="title">Dilkash Ghazala<br />
+                                    <small>dg24466</small>
+                                </h4>
+                            </a>
+                        </div>
+                        <p class="description text-center">Love to code<br>
+                           Good Reader and kuch nhi aur <br>
+                          
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="text-center">
+                        <button href="#" class="btn btn-simple"><i class="fa fa-facebook-square"></i></button>
+                        <button href="#" class="btn btn-simple"><i class="fa fa-twitter"></i></button>
+                        <button href="#" class="btn btn-simple"><i class="fa fa-google-plus-square"></i></button>
+                    </div>
+                </div>
+            </div>
+
+            
+            <div class="col-md-5">
+                <div class="card card-user">
+                    <div class="image">
+                        <img src="http://www.wowhdwallpapers.in/wp-content/uploads/2016/abstract/19316/genuine-abstract-wallpaper-800x600.jpg" alt="..."/>
                     </div>
                     <div class="content">
                         <div class="author">
                             <a href="#">
                                 <img class="avatar border-gray" src="assets/img/faces/face-3.jpg" alt="..."/>
 
-                                <h4 class="title">Mike Andrew<br />
-                                    <small>michael24</small>
+                                <h4 class="title">Ashwin Chafale<br />
+                                    <small>ashwinco</small>
                                 </h4>
                             </a>
                         </div>
-                        <p class="description text-center"> "Lamborghini Mercy <br>
-                            Your chick she so thirsty <br>
-                            I'm in that two seat Lambo"
+                        <p class="description text-center">Love to code <br>
+                           Artist and traveller <br>
+                            
+                        </p>
+                    </div>
+                    <hr>
+                    <div class="text-center">
+                        <button href="#" class="btn btn-simple"><i class="fa fa-facebook-square"></i></button>
+                        <button href="#" class="btn btn-simple"><i class="fa fa-twitter"></i></button>
+                        <button href="#" class="btn btn-simple"><i class="fa fa-google-plus-square"></i></button>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1"></div>
+
+            <div class="col-md-5">
+                <div class="card card-user">
+                    <div class="image">
+                        <img src="https://i.pinimg.com/originals/47/08/56/470856b73ea6da5fba1a8ce3e91c7c47.jpg" alt="..."/>
+                    </div>
+                    <div class="content">
+                        <div class="author">
+                            <a href="#">
+                                <img class="avatar border-gray" src="https://media.licdn.com/mpr/mpr/shrinknp_200_200/AAEAAQAAAAAAAAhdAAAAJDllODM1NWQ1LWExZWQtNDFiOC1hNTBlLWFlNTljMGMxYmViZg.jpg" alt="..."/>
+
+                                <h4 class="title">Dhananjay Hedaoo<br />
+                                    <small>djdolls</small>
+                                </h4>
+                            </a>
+                        </div>
+                        <p class="description text-center"> Love to code <br>
+                            Enthusiastic traveller and love designing Algorithms<br>
+                            
                         </p>
                     </div>
                     <hr>
@@ -117,5 +119,6 @@
                 </div>
             </div>
         </div>
+        
     </div>
 </div>
