--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -1,1 +1,41 @@
 <div id="map"></div>
+<div>
+    <div class="messageform">
+        <h3>Contact</h3>
+        <form action="">
+            <!-- <label>Name</label> -->
+            <br>
+            <input type="text" placeholder="Your Name" name="name" id="name" required>
+            <br>
+            <!-- <label>Email Address</label> -->
+            <br>
+            <input type="email" name="email" id="email" placeholder="username@domain.com"  required>
+            <br>
+            <!-- <label>Message</label> -->
+            <br>
+            <input type="text" name="message" id="message" placeholder="Your Message"  required>
+            <br>
+            <br>
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+    </div>
+    <style>
+        .messageform{
+            position: absolute;
+            margin: auto;
+            left: 0;
+            right: 0;
+            max-width: 600px;
+            background-color: white;
+            padding: 0px 40px;
+            padding-bottom: 40px;
+        }
+        .messageform > form > input{
+            background: #eee;
+            width: 100%;
+            padding: 10px;
+            border: 1px solid greenyellow;
+            border-radius: 10px;
+        }
+    </style>
+</div>
