--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 
 <div class="sidebar-wrapper">
     <div class="logo">
-        <a href="http://www.creative-tim.com" class="simple-text">
+        <a href="dashboard" class="simple-text">
             <div class="logo-img">
                 <img src="/assets/img/mediware-logo.png"  style="width: 42px;
                 top: 8px !important;"/>
@@ -20,6 +20,12 @@
             <a  [routerLink]="[menuItem.path]">
                 <i class="{{menuItem.icon}}"></i>
                 <p>{{menuItem.title}}</p>
+            </a>
+        </li>
+        <li class="active-pro">
+            <a href="https://www.persistent.com">
+                <i class="fa fa-building"></i>
+                <p>Persistent</p>
             </a>
         </li>
     </ul>
