--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -1,7 +1,8 @@
 <div id="map"></div>
 <div>
     <div class="messageform">
-        <h3>Contact</h3>
+        <h3>Contact Us</h3>
+        <hr class="hrbar">
         <form action="">
             <!-- <label>Name</label> -->
             <br>
@@ -16,7 +17,7 @@
             <input type="text" name="message" id="message" placeholder="Your Message"  required>
             <br>
             <br>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <button type="submit" class="btn btn-success">Submit</button>
         </form>
     </div>
     <style>
@@ -36,6 +37,9 @@
             padding: 10px;
             border: 1px solid greenyellow;
             border-radius: 10px;
+        }
+        .hrbar{
+            border: 1px solid greenyellow;
         }
     </style>
 </div>
