--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -23,9 +23,12 @@
                     </div>
                     <hr>
                     <div class="text-center">
-                        <button href="#" class="btn btn-simple"><i class="fa fa-facebook-square"></i></button>
-                        <button href="#" class="btn btn-simple"><i class="fa fa-twitter"></i></button>
-                        <button href="#" class="btn btn-simple"><i class="fa fa-google-plus-square"></i></button>
+                        <a href="https://www.facebook.com/aasisodiya"><button href="" class="btn btn-simple"><i class="fa fa-facebook-square"></i></button></a>
+                        
+                        <a href="https://twitter.com/aasisodiya"><button href="" class="btn btn-simple"><i class="fa fa-twitter"></i></button></a>
+                        
+                        <a href="https://plus.google.com/+AkashsinghSisodiya"><button href="" class="btn btn-simple"><i class="fa fa-google-plus-square"></i></button></a>
+                        
                     </div>
                 </div>
             </div>
