Loading screen circle color turned green

--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -1,7 +1,6 @@
-
 <div>
     <div class="messageform">
-        <h3>Contact Us</h3>
+        <h3>Message Us</h3>
         <hr class="hrbar">
         <form action="">
             <!-- <label>Name</label> -->
@@ -43,4 +42,4 @@
         }
     </style>
 </div>
-<div id="map"></div>
+<div id="map" style="top:450px !important"></div>
