--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -11,7 +11,7 @@
     </div>
     <ul class="nav responsive-nav">
         <li *ngIf="isMobileMenu()">
-            <a>
+            <a><i class="fa fa-user"></i>
                 <p>Administrator</p>
             </a>
         </li>
