--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -71,7 +71,7 @@
                     <div class="content">
                         <div class="author">
                             <a href="#">
-                                <img class="avatar border-gray" src="assets/img/faces/face-3.jpg" alt="..."/>
+                                <img class="avatar border-gray" src="assets/img/ashwin.jpg" alt="..."/>
 
                                 <h4 class="title">Ashwin Chafale<br />
                                     <small>ashwinco</small>
