Login form Revamp will be done Akash

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,4 +11,73 @@
             <footer-cmp></footer-cmp>
         </div>
     </div>
+
+    <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+               
+                <div class="modal-body" style="height:300px;">
+                    <div class="col-sm-6 loginform">
+                        
+                        <form>
+                        
+                        <div class="form-group">
+                        
+                        <label for="exampleInputEmail1">Email address</label>
+                        
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        
+                        </div>
+                        
+                        <div class="form-group">
+                        
+                        <label for="exampleInputPassword1">Password</label>
+                        
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        
+                        </div>
+                        
+                        <hr>
+                        
+                     
+                        
+                        <button type="submit" class="btn btn-success">Login</button>
+                        
+                   
+                        
+                        
+                        
+                        </form>
+                        
+                        <style>
+                        
+                        .loginform {
+                        
+                        background-color: #eee;
+                        
+                        padding: 20px;
+                        
+                        font-weight: bold;
+                        
+                        border-radius: 15px;
+                        
+                        position: absolute;
+                        
+                        right: 0;
+                        
+                        left: 0;
+                        
+                        margin: auto;
+                        
+                        }
+                        
+                        </style>
+                        
+                        </div>
+                </div>
+                
+            </div>
+        </div>
+    </div>
+
 </div>
