--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -23,9 +23,9 @@
             </a>
         </li>
         <li class="active-pro">
-            <a href="https://www.persistent.com">
+            <a data-toggle="modal" data-target="#exampleModal">
                 <i class="fa fa-building"></i>
-                <p>Persistent</p>
+                <p>Admin Login</p>
             </a>
         </li>
     </ul>
