Created the UI for login form

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -13,9 +13,9 @@
 
             <ul class="nav navbar-nav navbar-right">
                 <li>
-                    <a href="#">
+                    <!-- <a href="#">
                         <p>Administrator</p>
-                    </a>
+                    </a> -->
                 </li>
                 <li class="separator hidden-lg hidden-md"></li>
             </ul>
