--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -14,26 +14,27 @@
 
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
-            <div class="modal-content">
-               
-                <div class="modal-body" style="height:300px;">
-                    <div class="col-sm-6 loginform">
+            <div class="modal-content" style="background: url('/assets/img/greenbg.jpg');text-align:center;">
+               <h3 style="color: #545454 ;text-align:center; font-weight: bold;">Welcome</h3>
+               <img src="/assets/img/mediware-logo.png" alt="" style="width:200px;">
+                <div class="modal-body" style="height:230px;padding-top: 0;">
+                    <div class="col-sm-4 loginform" style="width:400px;">
                         
-                        <form>
+                        <form style="text-align: center !important;">
                         
                         <div class="form-group">
                         
-                        <label for="exampleInputEmail1">Email address</label>
+                        <!-- <label for="exampleInputEmail1">Email address</label> -->
                         
-                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+                        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter Email" autocomplete="off">
                         
                         </div>
                         
                         <div class="form-group">
                         
-                        <label for="exampleInputPassword1">Password</label>
+                        <!-- <label for="exampleInputPassword1">Password</label> -->
                         
-                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Enter Password" autocomplete="off">
                         
                         </div>
                         
@@ -41,7 +42,7 @@
                         
                      
                         
-                        <button type="submit" class="btn btn-success">Login</button>
+                        <button type="submit" class="btn btn-success" style="width:200px; background-color:rgb(58, 58, 58); color:white;border-radius:20px !important;box-shadow:0px 2px 5px rgba(70, 90, 29, 0.281);">Login</button>
                         
                    
                         
@@ -50,10 +51,19 @@
                         </form>
                         
                         <style>
+                            .form-group > input{
+                                border: 1px solid greenyellow;
+                                box-shadow:0px 1px 1px green;
+                                border-radius: 20px;
+                            }
+                            .form-group > input:focus{
+                                border: 1px solid greenyellow;
+                                box-shadow: 0px 0px 1px greenyellow;
+                            }
                         
                         .loginform {
                         
-                        background-color: #eee;
+                        background-color: #ffffff00;
                         
                         padding: 20px;
                         
