Deleted documentation folder and placeholder for email

--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -9,7 +9,7 @@
             <br>
             <!-- <label>Email Address</label> -->
             <br>
-            <input type="email" name="email" id="email" placeholder="username@domain.com"  required>
+            <input type="email" name="email" id="email" placeholder="useremail@address.com"  required>
             <br>
             <!-- <label>Message</label> -->
             <br>
