CSS Corrected for mobile view

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="main-content">
         <div class="col-md-8">
-        <div class="card card-inverse" style="background-color: #fff; border-color: #333; height:480px ">
+        <div class="card card-inverse" style="background-color: #fff; border-color: #333; min-height:480px; ">
                 <div class="card-block">
                     <div class="col-md-6" style="padding: 50px;">
                         <div><span><img src="https://image.flaticon.com/icons/svg/136/136723.svg" alt=""style="width:80px;height:80px;"></span><span style="font-size: 18px; color:#616161;font-weight: 400;padding: 10px; ">Nagpur, India</span></div>
