--- a/src/app/maps/maps.component.html
+++ b/src/app/maps/maps.component.html
@@ -9,7 +9,7 @@
             <br>
             <!-- <label>Email Address</label> -->
             <br>
-            <input type="email" name="email" id="email" placeholder="useremail@address.com"  required>
+            <input type="email" name="email" id="email" placeholder="useremail@address.com" required>
             <br>
             <!-- <label>Message</label> -->
             <br>
@@ -20,39 +20,50 @@
         </form>
     </div>
     <style>
-        .messageform{
-            position: absolute;
+        .messageform {
+            border-radius: 4px;
+            box-shadow: 0 1px 2px rgba(0, 0, 0, 0.05), 0 0 0 1px rgba(63, 63, 68, 0.1);
+            background-color: #FFFFFF;
+            margin-bottom: 30px;
             margin: auto;
+            margin-top: 20px;
+            margin-bottom: 10px;
             left: 0;
             right: 0;
             max-width: 600px;
             background-color: white;
             padding: 0px 40px;
-            padding-bottom: 40px;
+            padding: 20px;
         }
-        .messageform > form > input{
+
+        .messageform>form>input {
             background: #eee;
             width: 100%;
             padding: 10px;
             border: 1px solid greenyellow;
             border-radius: 10px;
         }
-        .messageform > form > input:focus{
+
+        .messageform>form>input:focus {
             border: 2px solid greenyellow;
         }
-        .hrbar{
+
+        .hrbar {
             border: 1px solid greenyellow;
         }
-        textarea{
+
+        textarea {
             width: 100%;
             padding: 10px;
             border: 1px solid greenyellow;
             border-radius: 10px;
+            resize: vertical;
         }
-        textarea:focus{
+
+        textarea:focus {
             border: 2px solid greenyellow;
             outline: none;
         }
     </style>
 </div>
-<div id="map" style="top:450px !important"></div>
+<div id="map"></div>
