Added Diseases Api

--- a/src/app/tables/tables.component.html
+++ b/src/app/tables/tables.component.html
@@ -15,8 +15,8 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr *ngFor="let row of tableData1.dataRows">
-                                        <td *ngFor="let cell of row">{{cell}}</td>
+                                    <tr *ngFor="let row of dataRow">
+                                        <td>{{row.Pathogen}}</td>
                                         <td><i style="color:#f44336" class="fa fa-pencil" aria-hidden="true"></i></td>
                                     </tr>
                                    
